Fixed overflow scroll on left tab problem on faq page

--- a/src/style/faq.less
+++ b/src/style/faq.less
@@ -301,8 +301,7 @@
 
 			.ant-tabs-tab-active {
 				background-color: @bgColor;
-				overflow: scroll;
-				height: 100%;
+				
 			}
 
 			.ant-tabs-ink-bar {
@@ -317,6 +316,11 @@
 			padding-left: 48px;
 			color: white;
 			text-align: left;
+
+			.ant-tabs-tabpane-active{
+				overflow: scroll;
+				height: 100%;
+			}
 
 			.tabpane-title {
 				color: @primaryColor;
